# HackerRank

./: README.md  ScriptGrpc  mod_samespace_speech.la
backUp/speechInterface/: main.c  say.pb.cc
backUp/test/: aaa.h  c_aaa
grpcCC/: client.cc  hello.grpc.pb.h  hello.pb.h  main.c  run.sh  script.sh  speechInterface.cpp  speechInterface.h
grpcCC/wrapper/: main.c  test
grpc_test/: client.cc  hello.grpc.pb.cc  hello.pb.cc  hello.proto  run.sh  server.cc
grpctest/: client.cpp  say.grpc.pb.cc  say.grpc.pb.h  say.pb.cc  say.pb.h  test
mod_samespace_speech2/: Makefile  Makefile.am  _Makefile_  mod_samespace_speech.c  mod_samespace_speech.la  mod_samespace_speech.lo
mod_samespace_speech2/speechInterface/: run.sh  say.grpc.pb.cc  say.grpc.pb.h  say.pb.h  say.proto  speechInterface.cpp  speechInterface.h
